; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_luaopen_stream.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_luaopen_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vlclua_stream_new = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"stream\00", align 1
@vlclua_memory_stream_new = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"memory_stream\00", align 1
@vlclua_directory_stream_new = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [17 x i8] c"directory_stream\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @luaopen_stream(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @vlclua_stream_new, align 4
  %5 = call i32 @lua_pushcfunction(i32* %3, i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @lua_setfield(i32* %6, i32 -2, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @vlclua_memory_stream_new, align 4
  %10 = call i32 @lua_pushcfunction(i32* %8, i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @lua_setfield(i32* %11, i32 -2, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* @vlclua_directory_stream_new, align 4
  %15 = call i32 @lua_pushcfunction(i32* %13, i32 %14)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @lua_setfield(i32* %16, i32 -2, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
